--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
+        Lily
+    </head>
+    <body>
+        <h1>Hello World</h1>
+        <p>I'm hosted with GitHub Pages.</p>
+    </body>
+</html>
