--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
-        Lily
-    </head>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+    <div className="fullPage">
+        <title>
+            Lily Maechling
+        </title>
+        <head>
+            <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+        </head>
+    <div className="navBar">
+
+    </div>    
+        
+        <body>
+            <h1>Hello World</h1>
+        </body>
+    </div>
 </html>
