--- a/index.html
+++ b/index.html
@@ -6,14 +6,30 @@
         </title>
         <head>
             <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
-            <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
-        </head>
-    <div className="navBar">
-
-    </div>    
-        
-        <body>
-            <h1>Hello World</h1>
-        </body>
+            <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Raleway&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
+        </head> 
+    <div className="pageHeader">
+        <h1>LILY MAECHLING</h1>
+        <div className="navBar">
+            <ul>
+                <li>
+                    <svg height="10" width="250">
+                    <line x1="0" y1="0" x2="250" y2="0" style="stroke:rgb(128,128,128);stroke-width:5" />
+                    </svg>
+                </li>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutMe.html">ABOUT ME</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <li>                    
+                    <svg height="10" width="250">
+                    <line x1="0" y1="0" x2="250" y2="0" style="stroke:rgb(128,128,128);stroke-width:5" />
+                    </svg>
+                </li>
+            </ul>
+        </div>   
+    </div>
+    <div className="pageContent">   
+        <p>Hello, I am Lily </p>
+    </div>
     </div>
 </html>
