updated other page headers

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <div className="fullPage">
-        <title>
-            Lily Maechling
-        </title>
-        <head>
-            <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
-            <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Raleway&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
-        </head> 
+    <title>
+        Lily Maechling
+    </title>
+    <head>
+        <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Raleway&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
+    </head> 
     <div className="pageHeader">
         <h1>LILY MAECHLING</h1>
         <div className="navBar">
@@ -29,7 +28,6 @@
         </div>   
     </div>
     <div className="pageContent">   
-        <p>Hello, I am Lily </p>
-    </div>
+        <p>Hello, I am Lily and this is my webpage. </p>
     </div>
 </html>
