--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <title>
+        About Me
+    </title>
+    <head>
+        <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Raleway&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
+    </head> 
     <div className="pageHeader">
         <h1>LILY MAECHLING</h1>
         <div className="navBar">
