--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>
-        Lily Maechling
+        Home
     </title>
     <head>
         <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
