about me started

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,4 +27,20 @@
             </ul>
         </div>   
     </div>
+    <div class="aboutMeSubjectContainer">
+        <h4>Name:</h4>
+        <h4>Hometown:</h4>
+        <h4>Pets:</h4>
+        <h4>Favorite Color:</h4>
+        <h4>Favorite Food:</h4>
+        <h4>Favorite Sport:</h4>
+    </div>
+    <div class="aboutMeInfoContainer">
+        <h4>Lily Maechling</h4>
+        <h4>Pasadena, CA</h4>
+        <h4>Annie</h4>
+        <h4>Water Blue</h4>
+        <h4>Chicken</h4>
+        <h4>Water Polo</h4>
+    </div>
 </html>
