--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
         <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Raleway&family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
     </head> 
-    <div className="pageHeader">
+    <div class="pageHeader">
         <h1>LILY MAECHLING</h1>
-        <div className="navBar">
+        <div class="navBar">
             <ul>
                 <li>
                     <svg height="10" width="250">
@@ -27,7 +27,10 @@
             </ul>
         </div>   
     </div>
-    <div className="pageContent">   
-        <p>Hello, I am Lily and this is my webpage. </p>
+    <div class="pageContent">  
+        <img src="img/IMG_2937.jpeg" width="300px"></img>
+        <div class="introInfo">
+            <p>Hello, I am Lily and this is my webpage. </p>
+        </div>
     </div>
 </html>
