--- a/aboutMe.html
+++ b/aboutMe.html
@@ -28,19 +28,95 @@
         </div>   
     </div>
     <div class="aboutMeSubjectContainer">
-        <h4>Name:</h4>
-        <h4>Hometown:</h4>
-        <h4>Pets:</h4>
-        <h4>Favorite Color:</h4>
-        <h4>Favorite Food:</h4>
-        <h4>Favorite Sport:</h4>
+        <h4>
+            <img src="img/name.png" height="28px" id="aboutMe"/>
+            <a href="#openModalName" title="click for more information">Name:</a>
+        </h4>
+        <h4>
+            <img src="img/home.png" height="28px" id="aboutMe"/>
+            <a href="#openModalHome" title="click for more information">Hometown:</a>
+        </h4>
+        <h4>
+            <img src="img/pets.png" height="28px" id="aboutMe">
+            <a href ="#openModalPets" title="click for more information">Pets:</a>
+        </h4>
+        <h4>
+            <img src="img/color.png" height="28px" id="aboutMe">
+            <a href ="#openModalColor" title="click for more information">Favorite Color:</a>
+        </h4>
+        <h4>
+            <img src="img/chicken.png" height="28px" id="aboutMe">
+            <a href ="#openModalFood" title="click for more information">Favorite Food:</a>
+        </h4>
+        <h4>
+            <img src="img/water-polo.png" height="28px" id="aboutMe">
+            <a href ="#openModalSport" title="click for more information">Favorite Sport:</a>
+        </h4>
     </div>
     <div class="aboutMeInfoContainer">
-        <h4>Lily Maechling</h4>
-        <h4>Pasadena, CA</h4>
-        <h4>Annie</h4>
-        <h4>Water Blue</h4>
-        <h4>Chicken</h4>
-        <h4>Water Polo</h4>
+        <h5>Lily Maechling</h5>
+        <h5>Pasadena, CA</h5>
+        <h5>Annie, a tabby cat</h5>
+        <h5>Water Blue</h5>
+        <h5>Chicken</h5>
+        <h5>Water Polo</h5>
     </div>
+    <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105616.13299651662!2d-118.20202099959752!3d34.184592913595395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c2dc38330b51%3A0x52b41161ad18f4a!2sPasadena%2C%20CA!5e0!3m2!1sen!2sus!4v1589582634749!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+<!-- 
+    <a href="#openModalName">Open Modal</a> -->
+
+    <div id="openModalName" class="modal">
+        <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <h2 sts>Modal For Name</h2>
+            <p>This is a sample modal box that can be created using the powers of CSS3.</p>
+            <p>You could do a lot of things here like have a pop-up ad that shows when your website loads, or create a login/register form for users.</p>
+        </div>
+    </div>
+
+    <div id="openModalHome" class="modal">
+        <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <h2>Modal Box</h2>
+            <p>This is a sample modal box that can be created using the powers of CSS3.</p>
+            <p>You could do a lot of things here like have a pop-up ad that shows when your website loads, or create a login/register form for users.</p>
+        </div>
+    </div>
+
+    <div id="openModalPets" class="modal">
+        <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <h2>Modal For Name</h2>
+            <p>This is a sample modal box that can be created using the powers of CSS3.</p>
+            <p>You could do a lot of things here like have a pop-up ad that shows when your website loads, or create a login/register form for users.</p>
+        </div>
+    </div>
+
+    <div id="openModalColor" class="modal">
+        <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <h2>Modal Box</h2>
+            <p>This is a sample modal box that can be created using the powers of CSS3.</p>
+            <p>You could do a lot of things here like have a pop-up ad that shows when your website loads, or create a login/register form for users.</p>
+        </div>
+    </div>
+
+    <div id="openModalFood" class="modal">
+        <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <h2>Modal For Name</h2>
+            <p>This is a sample modal box that can be created using the powers of CSS3.</p>
+            <p>You could do a lot of things here like have a pop-up ad that shows when your website loads, or create a login/register form for users.</p>
+        </div>
+    </div>
+
+    <div id="openModalSport" class="modal">
+        <div>
+            <a href="#close" title="Close" class="close">X</a>
+            <h2>Modal Box</h2>
+            <p>This is a sample modal box that can be created using the powers of CSS3.</p>
+            <p>You could do a lot of things here like have a pop-up ad that shows when your website loads, or create a login/register form for users.</p>
+        </div>
+    </div>
+
 </html>
