--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>   
     </div>
     <div class="pageContent">  
-        <img src="img/IMG_2937.jpeg" width="300px"></img>
+        <img src="img/IMG_2937.jpeg" id="main" width="300px"/>
         <div class="introInfo">
             <p>Hello, I am Lily and this is my webpage. </p>
         </div>
