--- a/aboutMe.html
+++ b/aboutMe.html
@@ -18,8 +18,9 @@
                 </li>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="aboutMe.html">ABOUT ME</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <li>                    
+                <li><a href="recipes.html">RECIPES</a></li>
+                <li><a href="mailto:lily.s.maechling.23@dartmouth.edu">EMAIL ME</a></li>
+                <li>                   
                     <svg height="10" width="250">
                     <line x1="0" y1="0" x2="250" y2="0" style="stroke:rgb(128,128,128);stroke-width:5" />
                     </svg>
@@ -56,7 +57,7 @@
     <div class="aboutMeInfoContainer">
         <h5>Lily Maechling</h5>
         <h5>Pasadena, CA</h5>
-        <h5>Annie, a tabby cat</h5>
+        <h5>Annie</h5>
         <h5>Water Blue</h5>
         <h5>Chicken</h5>
         <h5>Water Polo</h5>
@@ -70,8 +71,8 @@
             </a>
             <div style="text-align: center;"> 
                 <h2>Name</h2>
-                <p>My name is Elizabeth Maechling.</p>
-                <p>My nickname is Lily.</p>
+                <p>My name is Elizabeth Maechling. My nickname is Lily.</p>
+                <p><img src="img/IMG_2484.jpeg" height="200px"/></p>
             </div>
         </div>
     </div>
