--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 </li>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="aboutMe.html">ABOUT ME</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="recipes.html">RECIPES</a></li>
+                <li><a href="mailto:lily.s.maechling.23@dartmouth.edu">EMAIL ME</a></li>
                 <li>                    
                     <svg height="10" width="250">
                     <line x1="0" y1="0" x2="250" y2="0" style="stroke:rgb(128,128,128);stroke-width:5" />
@@ -28,7 +29,7 @@
         </div>   
     </div>
     <div class="pageContent">  
-        <img src="img/IMG_2937.jpeg" id="main" width="300px"/>
+        <img src="img/IMG_2937.jpeg" id="main" width="300px" />
         <div class="introInfo">
             <p>Hello, I am Lily and this is my webpage. </p>
         </div>
