--- a/aboutMe.html
+++ b/aboutMe.html
@@ -62,6 +62,7 @@
         <h5>Chicken</h5>
         <h5>Water Polo</h5>
     </div>
+    <div style="position: absolute; top: 80%; left: 20%; font-family: 'Raleway';"><img src="img/arrow.png" width="20px" id="rotate"/>&nbsp;Click for more information</div>
     <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105616.13299651662!2d-118.20202099959752!3d34.184592913595395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c2dc38330b51%3A0x52b41161ad18f4a!2sPasadena%2C%20CA!5e0!3m2!1sen!2sus!4v1589582634749!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
 
     <div id="openModalName" class="modal" id="small">
