--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <div class="pageContent">  
         <img src="img/IMG_2937.jpeg" id="main" width="300px" />
         <div class="introInfo">
-            <p>Hello, I am Lily and this is my webpage. </p>
+            <p>Hello, Mmy name is Lily! </p>
+            <p>I am a '23 who is interested in majoring in CS and Economics. </p>
         </div>
     </div>
 </html>
