--- a/recipes.html
+++ b/recipes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>
-        Contact
+        Recipe
     </title>
     <head>
         <link rel="stylesheet" type="text/css" href="index.css" media="screen"/>
@@ -34,43 +34,114 @@
             <div class="column">
                 <div class="overlay-image" style="z-index: 1; position: relative;">
                     <img src="img/brussels.jpg" alt="brussel sprouts" style="width: 100%; z-index: 2; position: static;"/> 
-                    <span class=" hover" style="position: absolute; top: 50%; z-index: 3;">BRUSSLES</span>
+                    <span class=" hover" style="position: absolute; top: 20%; z-index: 3;">
+                        BRUSSLES
+                        <ul>3 slices of bacon</ul>
+                        <ul>1 tablespoon of olive olive</ul>
+                        <ul>1 shallot</ul>
+                        <ul>1.5 pounds of brussel sprouts</ul>
+                        <ul>1 cup of chicken broth</ul>
+                    </span>
                 </div>
                 <div class="overlay-image" style="z-index: 1; position: relative;">
-                    <img src="img/carrots.jpg" alt="carrots" style="width: 100%; z-index: 2; position: static;"/> 
-                    <span class=" hover" style="position: absolute; top: 50%; z-index: 3;">CARROTS</span>
+                    <img src="img/carrots2.jpg" alt="carrots" style="width: 100%; z-index: 2; position: static;"/> 
+                    <span class=" hover" id="small" style="position: absolute; top: 2%; z-index: 3;">
+                        CARROTS
+                        <ul id="small">1.5 pounds of carrots</ul>
+                        <ul id="small">1 tablespoon of olive olive</ul>
+                        <ul id="small">1 avocado</ul>
+                        <ul id="small">1/4 cup lemon juice</ul>
+                        <ul id="small">chopped cilantro</ul>
+                    </span>
                 </div>
                 <div class="overlay-image"style="z-index: 1; position: relative;">
                     <img src="img/zucchini.jpg" alt="zucchini" style="width: 100%; z-index: 2; position: static;"/> 
-                    <span class=" hover" style="position: absolute; top: 50%; z-index: 3;">ZUCCHINI</span>
+                    <span class=" hover" style="position: absolute; top: 5%; z-index: 3;">
+                        ZUCCHINI
+                        <ul>4 zucchini, quartered lengthwise</ul>
+                        <ul>1/2 cup freshly grated parmesan</ul>
+                        <ul>1/2 teaspoon dried thyme</ul>
+                        <ul>1/2 teaspoon dried oregano</ul>
+                        <ul>1/4 teaspoon garlic powder</ul>
+                        <ul>2 tablespoons olive oil</ul>
+                        <ul>salt and pepper</ul>
+                    </span>
                 </div>
             </div>
             <div class="column">
                 <div class="overlay-image" style="z-index: 1; position: relative;">
                     <img src="img/panko.jpg" alt="panko" style="width: 100%; z-index: 2; position: static;"/> 
-                    <span class=" hover" style="position: absolute; top: 50%; z-index: 3;">PANKO</span>
+                    <span class=" hover" id="small" style="position: absolute; top: 10%; z-index: 3;">
+                        PANKO
+                        <ul id="small">3 chicken breasts</ul>
+                        <ul id="small">1/2 cup panko</ul>
+                        <ul id="small">1/2 parmesan</ul>
+                        <ul id="small">1 tbsp garlic powder</ul>
+                    </span>
                 </div>
                 <div class="overlay-image"  style="z-index: 1; position: relative;">
                     <img src="img/butternutsquash.jpg" alt="Butternut Squash" style="width: 100%; z-index: 2; position: static;"/> 
-                    <span class=" hover" id="medium" style="position: absolute; top: 50%; z-index: 3;">BUTTERNUT SQUASH</span>
+                    <span class=" hover" id="medium" style="position: absolute; top: 10%; z-index: 3;">
+                        BUTTERNUT SQUASH
+                        <ul>1 large butternut squash</ul>
+                        <ul>6 cups chicken stock</ul>
+                        <ul>1/2 onion</ul>
+                        <ul>1/2 tsp olive oil</ul>
+                        <ul>1 granny smith apple</ul>
+                        <ul>1/4 cup honey</ul>
+                        <ul>nutmeg, cinnamon, salt pepper</ul>
+                    </span>
                 </div>
                 <div class="overlay-image"  style="z-index: 1; position: relative;">
                     <img src="img/macaroons.jpg" alt="zucchini" style="width: 100%; z-index: 2; position: static;"/> 
-                    <span class=" hover" id="small" style="position: absolute; top: 50%; z-index: 3;">MACAROONS</span>
+                    <span class=" hover" id="small" style="position: absolute; top: 20%; z-index: 3;">
+                        MACAROONS
+                        <ul>4 oz almond paste</ul>
+                        <ul>1/2 cup powdered sugar</ul>
+                        <ul>1 egg white</ul>
+                        <ul>1/4 tsp vanilla </ul>
+                        <ul>sliced almonds</ul>
+                        <ul>salt</ul>
+                    </span>
                 </div>
             </div>
             <div class="column">
                 <div class="overlay-image" style="z-index: 1; position: relative;">
                     <img src="img/asparagus.jpg" alt="asparagus" style="width: 100%; z-index: 2; position: static;"/> 
-                    <span class=" hover" id="medium" style="position: absolute; top: 50%; z-index: 3;">ASPARAGUS</span>
+                    <span class=" hover" id="medium" style="position: absolute; top: 20%; z-index: 3;">
+                        ASPARAGUS
+                        <ul>2 lb asparagus</ul>
+                        <ul>1/2 olive oil</ul>
+                        <ul>2 avocados</ul>
+                        <ul>4 tbsp lemon juice</ul>
+                        <ul>1 tbsp dijon mustard</ul>
+                        <ul>4 slices of bacon</ul>
+                        <ul>salt and pepper</ul>
+                    </span>
                 </div>
                 <div class="overlay-image"  style="z-index: 1; position: relative;">
                     <img src="img/cauliflower.jpg" alt="cauliflower" style="width: 100%; z-index: 2; position: static;"/> 
-                    <span class=" hover" id="small" style="position: absolute; top: 50%; z-index: 3;">CAULIFLOWER</span>
+                    <span class=" hover" id="small" style="position: absolute; top: 2%; z-index: 3;">
+                        CAULIFLOWER
+                        <ul id="small">1 cauliflower</ul>
+                        <ul id="small">1/4 cup olive oil</ul>
+                        <ul id="small">1/4 cup parmesan</ul>
+                        <ul id="small">1 tbsp crushed garlic</ul>
+                        <ul id="small">2 tbsp lemon juice</ul>
+                        <ul id="small">salt and pepper</ul>
+                    </span>
                 </div>
                 <div class="overlay-image"  style="z-index: 1; position: relative;">
-                    <img src="img/corn.jpg" alt="corn" style="width: 100%; z-index: 2; position: static;"/> 
-                    <span class=" hover" style="position: absolute; top: 50%; z-index: 3;">CORN</span>
+                    <img src="img/potatoes.jpg" alt="potatoes" style="width: 100%; z-index: 2; position: static;"/> 
+                    <span class=" hover" style="position: absolute; top: 20%; z-index: 3;">
+                        POTATOES
+                        <ul>1 1/2 lbs baby potatoes</ul>
+                        <ul>1/2 cup olive oil</ul>
+                        <ul>10 garlic cloves</ul>
+                        <ul>1 tbsp fresh rosemary </ul>
+                        <ul>1/2 cup parmesan</ul>
+                        <ul>1/3 tsp salt</ul>
+                    </span>
                 </div>
             </div>     
     </div>
