--- a/recipes.html
+++ b/recipes.html
@@ -107,16 +107,16 @@
             </div>
             <div class="column">
                 <div class="overlay-image" style="z-index: 1; position: relative;">
-                    <img src="img/asparagus.jpg" alt="asparagus" style="width: 100%; z-index: 2; position: static;"/> 
-                    <span class=" hover" id="medium" style="position: absolute; top: 20%; z-index: 3;">
+                    <img src="img/asparagusbacon.jpg" alt="asparagus" style="width: 100%; z-index: 2; position: static;"/> 
+                    <span class=" hover" id="small" style="position: absolute; top: 0%; z-index: 3;">
                         ASPARAGUS
-                        <ul>2 lb asparagus</ul>
-                        <ul>1/2 olive oil</ul>
-                        <ul>2 avocados</ul>
-                        <ul>4 tbsp lemon juice</ul>
-                        <ul>1 tbsp dijon mustard</ul>
-                        <ul>4 slices of bacon</ul>
-                        <ul>salt and pepper</ul>
+                        <ul id="medium">2 lb asparagus</ul>
+                        <ul id="medium">1/2 olive oil</ul>
+                        <ul id="medium">2 avocados</ul>
+                        <ul id="medium">4 tbsp lemon juice</ul>
+                        <ul id="medium">1 tbsp dijon mustard</ul>
+                        <ul id="medium">4 slices of bacon</ul>
+                        <ul id="medium">salt and pepper</ul>
                     </span>
                 </div>
                 <div class="overlay-image"  style="z-index: 1; position: relative;">
