--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
     <div class="pageContent">  
         <img src="img/IMG_2937.jpeg" id="main" width="300px" />
         <div class="introInfo">
-            <p>Hello, Mmy name is Lily! </p>
+            <p>Hello, my name is Lily! </p>
             <p>I am a '23 who is interested in majoring in CS and Economics. </p>
+            <p>I am super excited to have the opportunity to apply to DALI this upcoming fall.
+                While I have enjoyed my CS courses thus far at Dartmouth, I am looking forward to solving real world issues. 
+                I think DALI is a fantastic opportunity to advance my skills as a programmer and connect with the local community.</p>
         </div>
     </div>
 </html>
